--- a/Includes/Bibliography/_ref_2009.bib
+++ b/Includes/Bibliography/_ref_2009.bib
@@ -117,3 +117,10 @@
   year={2009},
   publisher={Elsevier}
 }
+
+
+@phdthesis{zhang2010detailed,
+  title={Detailed modeling of soot formation/oxidation in laminar coflow diffusion flames},
+  author={Zhang, Qingan},
+  year={2010}
+}
