--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -1206,6 +1206,12 @@
   publisher={Elsevier}
 }
 
+
+@phdthesis{zhang2010detailed,
+  title={Detailed modeling of soot formation/oxidation in laminar coflow diffusion flames},
+  author={Zhang, Qingan},
+  year={2010}
+}
 @article{Palomares2010,
    author = {Verónica Palomares and Aintzane Goñi and Izaskun Gil De Muro and Iratxe De Meatza and Miguel Bengoechea and Igor Cantero and Teófilo Rojo},
    issn = {0378-7753},
