--- a/Includes/nomenclature.tex
+++ b/Includes/nomenclature.tex
@@ -4,6 +4,13 @@
 \nomenclature[a]{DEM}{Discrete Element Modelling}
 \nomenclature[a]{HACA}{H-abstraction-$\mathrm{C_2H_2}$/Carbon-addition}
 
+\nomenclature[a]{PSD}{Particle Size Distribution}
+\nomenclature[a]{SPSD}{Self-Preserving Size Distribution}
+\nomenclature[a]{MOM}{Method of Moment}
+\nomenclature[a]{TEM}{Transmission Electron Microscopy}
+
+\nomenclature[a]{CMF}{Carbon Mass Fraction}
+
 \nomenclature[c]{$k_B$}{Boltzmann constant \nomunit{$1.3806488 \times 10^{-23}$ \si{J \per K}}}
 \nomenclature[c]{$Av$}{Avogadro's number\nomunit{6.02214076 $\times 10^{23}$ \si{1 / mol}}}
 \nomenclature[c]{$R$}{Global gas constant\nomunit{8.314 \si{\joule\per\mol\per\kelvin}}}
